# Agent-Security-Paper-Daily

./: README.md  _config.yml  index.html  login.html  pyproject.toml  run.sh  settings.html
.github/workflows/: run.yml
ai/: enhance.py  system.txt
config/: venues.yaml
daily_arxiv/: scrapy.cfg
daily_arxiv/daily_arxiv/: catalog_classifier.py  check_stats.py  items.py  middlewares.py  pipelines.py  settings.py
daily_arxiv/daily_arxiv/spiders/: arxiv.py
data/: 2026-05-15.jsonl  2026-05-15.md  2026-05-15_AI_enhanced_Chinese.jsonl  2026-05-16.jsonl  2026-05-16.md  2026-05-16_AI_enhanced_Chinese.jsonl  2026-05-17.jsonl  2026-05-17.md  2026-05-17_AI_enhanced_Chinese.jsonl  2026-05-18.jsonl  2026-05-18.md  2026-05-18_AI_enhanced_Chinese.jsonl  2026-05-19.jsonl  2026-05-19.md  2026-05-19_AI_enhanced_Chinese.jsonl
js/: app.js  auth-config.js  data-config.js  settings.js
tickets/: process_tickets.py
to_md/: convert.py  paper_template.md
