[project]
name = "agent-security-paper-daily"
version = "0.1.0"
description = "Daily arXiv paper crawler with conference paper support for Agent Security research"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.9",
    "scrapy>=2.12.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "pydantic>=2.0.0",
]
license = "Apache-2.0"
